<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_books"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/learn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_btn"
        android:padding="13dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"/>

    <Button
        android:id="@+id/train_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_btn"
        android:padding="13dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/learn_btn"/>

    <Button
        android:id="@+id/about_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableTop="@drawable/ic_info"
        android:drawablePadding="3dp"
        android:padding="7dp"
        android:text="@string/about_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"/>
</RelativeLayout>