<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/verb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/verb"/>

    <TextView
        android:id="@+id/title_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_below="@+id/meaning"/>

    <TextView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:layout_below="@+id/title_example"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_next"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/next_verb"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_previous"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/previous_verb"
        android:background="@null"/>


    <CheckBox
        android:id="@+id/verb_known"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verb_known_label"
        android:theme="@style/MyCheckBox"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>